# days_count

./: .drone.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  message_done_file.tpl  message_drone_file.tpl  pyproject.toml
days_count/: config.py  main.py
days_count/config/: config.py
drone_tempates/: message_drone_deploy.tpl  message_drone_docker_build.tpl  message_drone_test.tpl
drone_templates/: message_drone_deploy.tpl  message_drone_docker_build.tpl  message_drone_test.tpl
tests/: test_days_count.py
